<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@mipmap/home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/radio"
            android:icon="@mipmap/radio"
            android:title="@string/envivo" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_settings" />
    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_music"
                android:icon="@mipmap/music"
                android:title="@string/music" />
        </menu>
    </item>

</menu>
